# qahr-selector

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: AUTO.md  DEVELOPMENT.md  ESP.md  GUILDS.md  MEMORY_MAP.md  README.md  STATUS.md
scripts/: esp_dump.py  prove_tick.py
src/selector/: __init__.py  __main__.py
src/selector/app/: __init__.py  bootstrap.py
src/selector/core/: __init__.py  models.py  offsets.py  radar.py
src/selector/engine/: __init__.py  frida_session.py  memory.py  mock_engine.py  protocol.py
src/selector/engine/agent/: .gitkeep  conquer.js
src/selector/services/: __init__.py  observability.py
src/selector/ui/: __init__.py  icons.py  main_window.py  sidebar.py  theme.py
src/selector/ui/pages/: auto_page.py  radar_page.py
src/selector/ui/widgets/: __init__.py  entity_table.py  minimap.py
src/selector/viewmodels/: __init__.py  auto_vm.py  radar_vm.py
tests/: conftest.py  test_auto_vm.py  test_engine.py  test_frida_session.py  test_observability.py  test_offsets.py  test_radar.py  test_ui_smoke.py
