[project]
name = "selector"
version = "0.1.0"
description = "Qahr Online v3071 trainer — PySide6 UI, pymem reads, Frida hooks (gameplay only)"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pymem>=1.13.1",
    "frida>=17",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8", "pyinstaller>=6"]

[project.scripts]
selector = "selector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selector"]

# include the Frida agent .js next to its package
[tool.hatch.build.targets.wheel.force-include]
"src/selector/engine/agent" = "selector/engine/agent"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true   # frida / pymem ship no type stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
